--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,14 @@
 /target
+/logs
 /classes
 /checkouts
 pom.xml
 pom.xml.asc
 *.jar
 *.class
-/.cpcache
 /.lein-*
-/.nrepl-history
 /.nrepl-port
-.hgignore
-.hg/
-
-# Dev db
-/db
+/.dir-locals.el
+/profiles.clj
+/dev/resources/local.edn
+/dev/src/local.clj
